# routes/api.php
@@ -22,6 +22,12 @@ Route::group(['prefix' => 'v1'], function () {
     Route::post("resend-registration-otp", [AuthController::class, "resendRegistrationOTP"]);
     Route::post("login-otp-send", [AuthController::class, "loginOTPSend"]);
     Route::post("verify-login-otp", [AuthController::class, "verifyLoginOTP"]);
+    Route::post("forgot-password", [AuthController::class, "forgotPassword"]);
+    Route::post("verify-forgot-password-otp", [AuthController::class, "verifyForgotPasswordOTP"]);
+    Route::post("update-password", [AuthController::class, "updatePassword"]);
+
+    // Login Using Email
+    Route::post("login-using-email", [AuthController::class, "loginUsingEmail"]);
 
     Route::group(['middleware' => ['jwt']], function () {
         Route::get("get-authenticate-user", [AuthController::class, "getAuthenticateUser"]);
